--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,14 @@ body {
 }
 
 nav {
+  position: fixed;
+  top: 0;
   width: 100vw;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #fff;
 }
 
 nav ul {
@@ -31,14 +34,83 @@ nav ul a {
 }
 
 #recipes-cards {
-  width: 90%;
-  margin: 50px auto;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 150px auto;
 }
 
 .card {
-  width: 200px;
-  height: 200px;
-  background-color: beige;
+  width: 290px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 50px;
+  padding: 5px 0 35px;
+  border: 1px solid #EFE7C4;
+  border-radius: 12px;
+  background-color: rgba(239, 231, 196, 0.5);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.card:last-child {
+  margin-right: 0;
+}
+
+.meal-thumbnail {
+  width: 280px; 
+  height: 280px;
+  object-fit: cover;
+}
+
+.meal-thumbnail img {
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+}
+
+.card-header {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.meal-name {
+  font-size: 28px;
+  margin-top: 15px;
+  color: #9B8834;
+}
+
+.like-btn {
+  height: 40px;
+  font-size: 1.3rem;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: #bf0603;
+}
+
+.comments-btn {
+  cursor: pointer;
+  align-self: flex-start;
+  font-size: 1.2rem;
+  font-family: inherit;
+  color: #fff;
+  font-weight: 600;
+  background-color: #E05F37;
+  border: 1px solid#E05F37;
+  border-radius: 8px;
+  padding: 8px 12px;
+  margin-left: 15px;
+  transition: all 0.5s ease;
+}
+
+.comments-btn:hover {
+  background-color: #ff914d;
+  border: 1px solid #ff914d;
 }
 
 .footer a {
