--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,8 @@
 body {
   margin: 0;
   font-family: 'Dosis', sans-serif;
+  overflow-x: hidden;
+  color: #343a40;
 }
 
 nav {
@@ -13,7 +15,9 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
+  background-color: #fefae0;
+  z-index: 1;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 nav ul {
@@ -26,37 +30,59 @@ nav ul {
 
 nav ul a {
   text-decoration: none;
-  color: #343a40;
+  color: #606c38;
   font-size: 18px;
   letter-spacing: 0.3px;
   font-weight: 600;
   margin-right: 40px;
+  transition: all 0.3s ease-in-out;
+}
+
+nav ul a:hover {
+  color: #E05F37;
+}
+
+#headline {
+  width: 100vw;
+  height: 500px;
+  background-image: url('./assets/banner.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0 50%;
+  margin-top: 50px;
 }
 
 #recipes-cards {
+  position: relative;
   width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   margin: 150px auto;
+  gap: 40px;
+}
+
+#recipes-cards h2{
+  position: absolute;
+  top: -80px;
+  text-align: center;
+  font-size: 35px;
 }
 
 .card {
+  position: relative;
   width: 290px;
+  height: 450px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 50px;
   padding: 5px 0 35px;
+  margin-top: 40px;
   border: 1px solid #EFE7C4;
   border-radius: 12px;
   background-color: rgba(239, 231, 196, 0.5);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-}
-
-.card:last-child {
-  margin-right: 0;
 }
 
 .meal-thumbnail {
@@ -79,14 +105,15 @@ nav ul a {
 }
 
 .meal-name {
-  font-size: 28px;
+  font-size: 23px;
   margin-top: 15px;
   color: #9B8834;
 }
 
 .like-btn {
+  min-width: 65px;
   height: 40px;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   background-color: transparent;
   border: none;
   outline: none;
@@ -94,6 +121,8 @@ nav ul a {
 }
 
 .comments-btn {
+  position: absolute;
+  bottom: 25px;
   cursor: pointer;
   align-self: flex-start;
   font-size: 1.2rem;
@@ -113,14 +142,21 @@ nav ul a {
   border: 1px solid #ff914d;
 }
 
-.footer a {
-  text-decoration: none;
-  color: #343a40;
-  width: 100px;
-  margin-left: 10px;
+footer{
+  width: 100vw;
+  background-color: #EFE7C4;
+  padding: 15px 0;
 }
 
 .footer {
-  margin-left: 5%;
+  font-size: 20px;
   font-weight: 600;
+  margin-left: 50px;
+}
+
+.footer a {
+  text-decoration: none;
+  color: #606c38;
+  width: 100px;
+  margin: 0 5px;
 }
