Fix like button margins

--- a/src/style.css
+++ b/src/style.css
@@ -111,13 +111,14 @@ nav ul {
 }
 
 .like-btn {
-  min-width: 65px;
+  min-width: 70px;
   height: 40px;
   font-size: 1.2rem;
   background-color: transparent;
   border: none;
   outline: none;
   color: #bf0603;
+  margin-left: 15px;
 }
 
 .comments-btn {
