--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,8 @@
 
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: 'Dosis', sans-serif;
 }
 
@@ -51,4 +53,121 @@ nav ul a {
 .footer {
   margin-left: 5%;
   font-weight: 600;
+}
+
+.modal {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  display: none;
+}
+
+.image-container {
+  width: auto;
+  height: 14rem;
+  object-fit: contain;
+}
+
+.top-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+.modal-head {
+  display: flex;
+  width: 33rem;
+}
+
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  background-color: white;
+  margin: 10px auto;
+  align-items: center;
+  padding: 5px;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+
+.units {
+  display: flex;
+  justify-content: space-between;
+  width: 30rem;
+  margin-bottom: 5px;
+  margin-left: -50px;
+}
+
+.left-detail,
+.right-detail {
+  display: flex;
+  flex-direction: column;
+}
+
+#form-1 {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin-bottom: 5px;
+}
+
+#insight {
+  margin: 10px;
+  height: 50px;
+}
+
+#yourname {
+  margin: 10px;
+  height: 30px;
+}
+
+#submit {
+  width: 25%;
+  height: 30px;
+  align-self: flex-end;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.modal-body span {
+  line-height: 30px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.close {
+  font-size: 5rem;
+  padding: -10rem;
+  cursor: pointer;
+  margin-top: -40px;
+}
+
+.comments {
+  margin-left: -50px;
+}
+
+.comments ul {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  margin-left: -30px;
+}
+
+h4 {
+  font-size: 18px;
+  margin: 12px auto;
+  width: 10rem;
+}
+
+p {
+  font-size: 16px;
+  font-weight: 500;
+  width: 150px;
+  margin-top: 10px;
+  margin-left: 10rem;
+  margin-bottom: -15px;
 }
