--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;400;500;600;700&display=swap');
 
 body {
   margin: 0;
   font-family: 'Dosis', sans-serif;
   overflow-x: hidden;
   color: #343a40;
+}
+
+body.no-scroll {
+  overflow: hidden;
 }
 
 nav {
@@ -142,6 +146,129 @@ nav ul {
 .comments-btn:hover {
   background-color: #ff914d;
   border: 1px solid #ff914d;
+}
+
+.comment-modal {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(52, 58, 64, 0.8);
+  justify-content: center;
+  padding: 50px 0;
+  box-sizing: border-box;
+  overflow-y: scroll;
+}
+
+.comment-modal.active {
+  display: flex;
+  z-index: 3;
+}
+
+.popup-window {
+  width: 60%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fefae0;
+  border-radius: 12px;
+  padding: 30px;
+}
+
+.popup-image {
+  width: 90%;
+}
+
+.popup-image img {
+  width: 100%;
+  max-height: 300px;
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+.item-info {
+  width: 87%;
+}
+
+.item-info h3 {
+  font-size: 35px;
+  color: #606c38;
+  margin-bottom: 0;
+}
+
+.recipe {
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  color: #000;
+  line-height: 1.5;
+}
+
+.comments-container {
+  width: 500px;
+}
+
+.comment-modal h4 {
+  font-size: 25px;
+  text-align: center;
+}
+
+.comment {
+  margin-bottom: 15px;
+  border-bottom: 1px solid #ced4da;
+}
+
+.comment span {
+  font-size: 17px;
+  font-weight: 600;
+  margin-right: 5px;
+}
+
+.comment .date {
+  margin-right: 20px;
+}
+
+.comment .comment-text {
+  font-weight: 500;
+}
+
+.add-comment {
+  width: 500px;
+  margin-top: 20px;
+}
+
+.add-comment form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.add-comment form input {
+  padding: 8px 12px;
+  font-size: 14px;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  margin-bottom: 15px;
+}
+
+.add-comment form input:focus {
+  outline: 2px solid #ced4da;
+}
+
+#submit-btn {
+  cursor: pointer;
+  width: 90px;
+  background-color: #e05f37;
+  color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+
+#submit-btn:hover {
+  background-color: #ff914d;
 }
 
 footer {
