--- a/src/style.css
+++ b/src/style.css
@@ -176,18 +176,23 @@ footer {
 .image-container {
   width: 20rem;
   height: 15rem;
+  padding: 10px;
+  border-radius: 10px;
   object-fit: contain;
+  box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
 }
 
 .top-img {
   width: 100%;
   height: 100%;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .modal-head {
   display: flex;
   width: 33rem;
+  padding: 10px;
+  justify-content: center;
 }
 
 .modal-container {
@@ -195,9 +200,10 @@ footer {
   flex-direction: column;
   width: 70%;
   background-color: white;
-  margin: 50px auto;
+  margin: 30px auto;
   align-items: center;
   padding: 5px;
+  border-radius: 10px;
   border: 2px solid black;
 }
 
@@ -220,6 +226,7 @@ footer {
   flex-direction: column;
   width: 60%;
   margin-bottom: 5px;
+  margin-top: -20px;
 }
 
 #insight {
@@ -251,10 +258,17 @@ footer {
   padding: -10rem;
   cursor: pointer;
   margin-top: -40px;
+  margin-left: 10px;
 }
 
 .comments {
   margin-left: -50px;
+  padding: 20px;
+  width: 40rem;
+  display: flex;
+  margin-top: -20px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .comments ul {
@@ -262,12 +276,12 @@ footer {
   flex-direction: column;
   list-style-type: none;
   margin-left: -30px;
+  margin-top: -20px;
 }
 
 h4 {
-  font-size: 18px;
-  margin-top: 25px;
-  padding: 20px;
-  margin-left: -100px;
+  text-align: center;
+  font-size: 24px;
+  margin-top: -2px;
   font-weight: 700;
 }
